# django_market_place

./: .env.sample  README.md  category_fix.json  dump.rdb  groups_fix.json  product_fix.json  pyproject.toml  user_fix.json
blog/: admin.py  models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: base.html  post_confirm_delete.html  post_detail.html  post_form.html  post_list.html
catalog/: admin.py  forms.py  models.py  services.py  urls.py  views.py
catalog/management/commands/: add_test_products.py
catalog/migrations/: 0001_initial.py  0002_alter_product_options_product_is_available_and_more.py
catalog/templates/catalog/: add_category.html  add_product.html  base.html  category_products.html  contacts.html  home.html  product.html  product_confirm_delete.html  product_detail.html  product_form.html  product_list.html  products_list.html
catalog/templates/catalog/includes/: inc_menu.html
config/: settings.py  urls.py
static/js/: color-modes.js
users/: admin.py  forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py
users/templates/: login.html  register.html
