[tool.poetry]
name = "django-market-place"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "django_market_place"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
